--- a/table/css/bootstrap-table.css
+++ b/table/css/bootstrap-table.css
@@ -194,7 +194,6 @@
     clear: both;
     font-weight: normal;
     line-height: 1.428571429;
-    
 }
 
 .fixed-table-toolbar .bs-bars,
@@ -227,7 +226,7 @@
     font-weight: bold;
     display: inline-block;
     min-width: 30%;
-    text-align: center !important;
+    text-align: left !important;
 }
 
 /* support bootstrap 2 */
