--- a/project_css.css
+++ b/project_css.css
@@ -1,33 +1,7 @@
 .modal-content {
-	background-image: url("children.jpg");
+	background-image: url("girl.jpg");
 	background-size: cover;
 }
-.star{
-	color: gold;
-	font-size: 35px;
-	padding: 10px; /* space out the stars */
-	
-  }
-  .star::before{
-	content: '\2606';    /* star outline */
-	cursor: pointer;
-  }
-  .star.rated::before{
-	/* the style for a selected star */
-	content: '\2605';  /* filled star */
-  }
-  
-  .stars{
-	  counter-reset: rateme 0;   
-	  font-size: 2.0rem;
-	  margin-left: 675px;
-	  margin-top: 80px;
-	  
-  }
-  .star.rated{
-	  counter-increment: rateme 1;
-  }
-  
 .comment{
 	width:90%;
 	height: 250px;
@@ -66,6 +40,30 @@ button{
     padding:0;
 	background: transparent;
 	margin-right: 15px;
+}
+.star{
+	color: gold;
+	font-size: 35px;
+	padding: 10px; /* space out the stars */
+	
+}
+.star::before{
+	content: '\2606';    /* star outline */
+	cursor: pointer;
+}
+.star.rated::before{
+	/* the style for a selected star */
+	content: '\2605';  /* filled star */
+}
+.stars{
+	  counter-reset: rateme 0;   
+	  font-size: 2.0rem;
+	  margin-left: 675px;
+	  margin-top: 80px;
+	  
+}
+.star.rated{
+	  counter-increment: rateme 1;
 }
 .nav-item {
 	border-radius: 10px;
@@ -111,7 +109,7 @@ button{
 }
 .nav-item:hover {
 	letter-spacing: 2px;
-	}
+}
 .nav-item:hover::before{
 	opacity: 1;	
 	-webkit-transform: scale(1, 1);
