made white color for table

--- a/table/css/bootstrap-table.css
+++ b/table/css/bootstrap-table.css
@@ -36,6 +36,7 @@
     border-radius: 4px;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
+    background-color: white;
 }
 
 .fixed-table-container.table-no-bordered {
