--- a/project_css.css
+++ b/project_css.css
@@ -1,3 +1,7 @@
+#logo{
+	opacity: 1;
+  	filter: alpha(opacity=100);
+}
 .modal-content {
 	background-image: url("girl.jpg");
 	background-size: cover;
@@ -19,7 +23,7 @@
 }
 #input{
 	margin-left:0px;
-	margin-top:125px; 
+	margin-top:80px; 
 	border-radius: 10px; 
 	width:70%;
 }
@@ -31,6 +35,12 @@ hr{
 img{
     width:75px;
 	height:75px;
+	opacity: 0.5;
+	  filter: alpha(opacity=50);
+}
+img:hover {
+	opacity: 1.0;
+	filter: alpha(opacity=100);
 }
 button{
     width:75px;
@@ -108,7 +118,7 @@ button{
 	
 }
 .nav-item:hover {
-	letter-spacing: 2px;
+	letter-spacing: 0px;
 }
 .nav-item:hover::before{
 	opacity: 1;	
@@ -125,12 +135,11 @@ button{
 	width: 95%;
 	height: 75%;
 	z-index: 1;
-	-webkit-transition: all 0.3s;
-	-moz-transition: all 0.3s;
-	-o-transition: all 0.3s;
-	transition: all 0.3s;
+	-webkit-transition: all 0.5s;
+	-moz-transition: all 0.5s;
+	-o-transition: all 0.5s;
+	transition: all 0.5s;
 	background-color: rgba(255,255,255,0.25);
-	
 }
 .nav-item:hover::after{
 	border-radius: 10px;
