--- a/project_css.css
+++ b/project_css.css
@@ -1,3 +1,4 @@
+
 #logo{
 	opacity: 1;
   	filter: alpha(opacity=100);
@@ -21,11 +22,11 @@
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
 }
-#input2{
+input{
 	margin-left:0px;
 	margin-top:25px; 
 	border-radius: 10px; 
-	width:70%;
+	width:;
 }
 hr{
 	border:1px solid rgba(255,255,255,0.35);
@@ -36,7 +37,8 @@ img{
     width:75px;
 	height:75px;
 	opacity: 0.5;
-	  filter: alpha(opacity=50);
+	filter: alpha(opacity=50);
+	mergin
 }
 img:hover {
 	opacity: 1.0;
